[package]
name = "rusty-lofi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"  # Add this for async support
web-sys = { version = "0.3", features = ["AudioContext", "AudioBuffer", "AudioBufferSourceNode", "AudioDestinationNode"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3